kv-store/proc-macros/build_fail_tests/binary_static_env/require_binary_static_env_ext/no_args.stderr
error: Expected at least 4 arguments, got 0.
 --> $DIR/no_args.rs:5:1
  |
5 | #[require_binary_static_env_ext]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
